job duration and completion updated
